test_suite5/ALAN/test_suite/alan-2022-examples/failing/004600_mutation.alan
source Z3E begin leave function ll2() begin relax end end
